# PyRoaringBitMap

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .travis_osx.sh  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  amalgamation.py  appveyor.yml  benchmark.py  croaring.pxd  custom_roaring.c  custom_roaring.h  cydoctest.py  download_amalgamation.py  prepare_dist.sh  pyproject-cibuildwheel.toml  pyproject.toml  pyroaring.py  pyroaring.pyx  quick_bench.py  quick_bench.sh  setup.cfg  setup.py  test.py  test64.py  test_state_machine.py  tox.ini  types_declarations.py  version_benchmark.sh  version_evaluation.ipynb
.github/workflows/: buildwheels.yml  main.yml  release.yml  test-release.yml  test.yml
data/: version_evaluation_2021-09-13.csv  version_evaluation_2023-03-26.csv
docs/: Makefile  conf.py  index.rst  requirements.txt
pyroaring/: __init__.py  __init__.pyi  __main__.py  abstract_bitmap.pxi  bitmap.pxi  croaring.pxd  croaring_version.pxi  frozen_bitmap.pxi  pyroaring.py  pyroaring.pyx  roaring.c  roaring.h  roaring64.pxi  types_declarations.py  version.pxi
