[tool.poetry]
name = "pyroaringbitmap"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Cython = "^0.29.24"
ipython = "^7.27.0"
wheel = "^0.37.0"
hypothesis = "<5.29"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
